Add formaas support
Create a formaas version of the js libs (+ a Formaas.js helper lib)
Create an activiti -> formaas form handler

The main demo now uses formaas (Main + html UIs)

--- a/lp-simulation-environment/simulator/src/main/resources/ui-process.html
+++ b/lp-simulation-environment/simulator/src/main/resources/ui-process.html
@@ -150,9 +150,9 @@
 
         <script type="text/javascript" src="resources/deps/opt/ZSchema-browser.js"></script>
         <script type="text/javascript" src="resources/lib/jquery.slimscroll.min.js"></script>
-        <script type="text/javascript" src="resources/lib/jsonform.js"></script>
 
-        <script type="text/javascript" src="resources/Process-jsonform.js"></script>
+        <script type="text/javascript" src="resources/Formaas.js"></script>
+        <script type="text/javascript" src="resources/Process-formaas.js"></script>
         <script type="text/javascript" src="resources/Process.js"></script>
 
         <script type="text/javascript" src="resources/HeightMonitor.js"></script>
