--- a/lp-simulation-environment/simulator/src/main/resources/ui.html
+++ b/lp-simulation-environment/simulator/src/main/resources/ui.html
@@ -218,9 +218,9 @@
 
         <script type="text/javascript" src="resources/deps/opt/ZSchema-browser.js"></script>
         <script type="text/javascript" src="resources/lib/jquery.slimscroll.min.js"></script>
-        <script type="text/javascript" src="resources/lib/jsonform.js"></script>
 
-        <script type="text/javascript" src="resources/Task-jsonform.js"></script>
+        <script type="text/javascript" src="resources/Formaas.js"></script>
+        <script type="text/javascript" src="resources/Task-formaas.js"></script>
         <script type="text/javascript" src="resources/Task.js"></script>
         <script type="text/javascript" src="resources/Users.js"></script>
         <script type="text/javascript" src="resources/Webchat.js"></script>
